# libpanelappletmm

./: Makefile  README.md
src/: Makefile.am  Makefile.in  TODO  autogen.sh  configure  configure.in  libpanelappletmm.spec.in
src/docs/: Makefile.am  Makefile.in
src/docs/reference/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in
src/examples/: Makefile.am  Makefile.am_fragment  Makefile.in
src/examples/gconf/: Makefile.am  Makefile.in  Simple_PanelAppGConf.server  main.cc
src/examples/simple/: Makefile.in  README  Simple_PanelApp.server  main.cc
src/libpanelapplet/: Makefile.am  Makefile.in  libpanelappletmm-2.6-uninstalled.pc.in  libpanelappletmm-2.6.pc.in
src/libpanelapplet/libpanelappletmm/: Makefile.am  Makefile.in  applet.cc  enums.cc  factory.cc  init.cc  private.cc  wrap_init.cc
src/libpanelapplet/libpanelappletmm/private/: Makefile.am  Makefile.in
src/libpanelapplet/src/: Makefile.am  Makefile.in  applet.ccg  applet.hg  enums.ccg  enums.hg  libpanelapplet.defs  libpanelapplet_enums.defs  libpanelapplet_methods.defs  libpanelapplet_signals.defs
src/scripts/: Makefile.in
src/tools/: Makefile.in
src/tools/extra_defs_gen/: Makefile.am  Makefile.in  generate_defs_libpanelapplet.cc
src/tools/m4/: Makefile.am  Makefile.in  Makefile_list_of_sources.am_fragment  convert.m4  convert_libpanelappletmm.m4
