SUBDIRS		= src libpanelappletmm

EXTRA_DIST	= README					\
		  libpanelappletmmconfig.h.in libpanelappletmm.h	\
		  libpanelappletmm-2.6.pc.in libpanelappletmm-2.6-uninstalled.pc.in

libpanelappletmm_includedir = $(includedir)/libpanelappletmm-2.6
libpanelappletmm_include_HEADERS = libpanelappletmm.h

libpanelappletmm_configdir		= $(libdir)/libpanelappletmm-2.6/include
libpanelappletmm_config_DATA	= libpanelappletmmconfig.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libpanelappletmm-2.6.pc

                           
