## Copyright (c) 2003
## The libpanelappletmm development team.

sublib_name	= libpanelappletmm
sublib_namespace = Panel
sublib_parentdir = libpanelappletmm
files_defs	= libpanelapplet.defs \
							libpanelapplet_enums.defs \
							libpanelapplet_methods.defs \
							libpanelapplet_signals.defs \
							libpanelapplet_vfuncs.defs \
							libpanelapplet_docs.xml \
							libpanelapplet_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

